...
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                tools:text="Page Title" />


            <ImageButton
                android:id="@+id/page_menu_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_background"
                android:backgroundTint="?android:attr/colorBackground"
                android:onClick="@{() -> onClickMenu.run()}"
...
